20210822 change the icon

--- a/_posts/2021-08-22-欢迎来到侯林涛的博客.md
+++ b/_posts/2021-08-22-欢迎来到侯林涛的博客.md
@@ -1,6 +1,6 @@
 ---
-title: Welcome
-tags: TeXt
+title: 欢迎来到侯林涛的博客
+tags: 简历
 ---
 
 If you see this page, that means you have setup your site. enjoy! :ghost: :ghost: :ghost:
